# tunetagger

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
config/: tunetagger.toml
crates/tunetagger-cli/: Cargo.toml
crates/tunetagger-cli/src/: main.rs
crates/tunetagger-cli/src/commands/: batch.rs  interactive.rs  lookup.rs  mod.rs  recognize.rs  scan.rs  tag.rs
crates/tunetagger-core/: Cargo.toml
crates/tunetagger-core/src/: config.rs  errors.rs  lib.rs  model.rs  pipeline.rs
crates/tunetagger-files/: Cargo.toml
crates/tunetagger-files/src/: backup.rs  lib.rs  naming.rs  scanner.rs  sidecar.rs
crates/tunetagger-metadata/: Cargo.toml
crates/tunetagger-metadata/src/: apple.rs  lib.rs  musicbrainz.rs  normalize.rs  scoring.rs
crates/tunetagger-recognition/: Cargo.toml
crates/tunetagger-recognition/src/: lib.rs  songrec.rs
crates/tunetagger-tags/: Cargo.toml
crates/tunetagger-tags/src/: artwork.rs  id3_writer.rs  lib.rs  lyrics.rs
docs/: requirements.md
