[workspace]
resolver = "2"
members = [
  "crates/tunetagger-core",
  "crates/tunetagger-cli",
  "crates/tunetagger-recognition",
  "crates/tunetagger-metadata",
  "crates/tunetagger-tags",
  "crates/tunetagger-files",
]

[workspace.package]
edition = "2021"
version = "0.1.3"
authors = ["sansoo1972"]
license = "MIT"
repository = "https://github.com/sansoo1972/tunetagger"
rust-version = "1.78"

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
id3 = "1.16"
lofty = "0.22"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
sanitize-filename = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
songrec-lib = "0.5.3"
thiserror = "1.0"
tokio = { version = "1.40", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "time",
  "fs",
] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
urlencoding = "2.1"
walkdir = "2.5"