[package]
name = "tunetagger"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tunetagger-core = { path = "../tunetagger-core" }
tunetagger-files = { path = "../tunetagger-files" }
tunetagger-recognition = { path = "../tunetagger-recognition" }
tunetagger-metadata = { path = "../tunetagger-metadata" }
tunetagger-tags = { path = "../tunetagger-tags" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
