[package]
name = "tunetagger-recognition"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tunetagger-core = { path = "../tunetagger-core" }
anyhow.workspace = true
serde_json.workspace = true
songrec-lib.workspace = true
tokio.workspace = true
tracing.workspace = true